kubernetes/2_microservices/frontend/kubernetes/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: frontend-ingress
    namespace: thoughts
spec:
    rules:
        - host: frontend.example.local
          http:
            paths:
              - backend:
                  serviceName: frontend-service
                  servicePort: 80
                path: /
